--- a/main.html
+++ b/main.html
@@ -1,1 +1,5 @@
-
+<DOCTYPE html>
+<head>
+  <h1>The Bi-Weekly Bamboozled</h1>
+  <h3>The unofficial Lionville Middle School Newspaper With some extre news!</h3>
+</head>
